bugfix/text-align to left, remove center

--- a/style/sections/_section.scss
+++ b/style/sections/_section.scss
@@ -10,7 +10,6 @@
     font-size: 44px;
     line-height: 55px;
     color: #000;
-    text-align: center;
     &--white {
       color: white;
     }
